Almost done (still aestetic fixes and of course doc, doc, doc)

--- a/Makefile.am
+++ b/Makefile.am
@@ -46,6 +46,7 @@ nobase_include_HEADERS = dhcpctl/dhcpctl.h
 
 DISTCHECK_CONFIGURE_FLAGS =  @DISTCHECK_ATF_CONFIGURE_FLAG@
 DISTCHECK_CONFIGURE_FLAGS += @DISTCHECK_LIBBIND_CONFIGURE_FLAG@
+DISTCHECK_CONFIGURE_FLAGS += @DISTCHECK_LIBTOOL_CONFIGURE_FLAG@
 
 distcheck-hook:
 if HAVE_BINDDIR
