--- a/dhcpctl/Makefile.am.in
+++ b/dhcpctl/Makefile.am.in
@@ -1,3 +1,8 @@
+BINDLIBIRSDIR=@Q@BINDLIBIRSDIR@Q@
+BINDLIBDNSDIR=@Q@BINDLIBDNSDIR@Q@
+BINDLIBISCCFGDIR=@Q@BINDLIBISCCFGDIR@Q@
+BINDLIBISCDIR=@Q@BINDLIBISCDIR@Q@
+
 bin_PROGRAMS = omshell
 lib_@DHLIBS@ = libdhcpctl.@A@
 noinst_PROGRAMS = cltest
@@ -6,16 +11,16 @@ EXTRA_DIST = $(man_MANS)
 
 omshell_SOURCES = omshell.c
 omshell_LDADD = libdhcpctl.@A@ ../common/libdhcp.@A@ ../omapip/libomapi.@A@ \
-		@BINDLIBIRSDIR@/libirs.@A@ \
-		@BINDLIBDNSDIR@/libdns.@A@ \
-	        @BINDLIBISCCFGDIR@/libisccfg.@A@ \
-		@BINDLIBISCDIR@/libisc.@A@
+		$(BINDLIBIRSDIR)/libirs.@A@ \
+		$(BINDLIBDNSDIR)/libdns.@A@ \
+	        $(BINDLIBISCCFGDIR)/libisccfg.@A@ \
+		$(BINDLIBISCDIR)/libisc.@A@
 
 libdhcpctl_@A@_SOURCES = dhcpctl.c callback.c remote.c
 
 cltest_SOURCES = cltest.c
 cltest_LDADD = libdhcpctl.@A@ ../common/libdhcp.@A@ ../omapip/libomapi.@A@ \
-	       @BINDLIBIRSDIR@/libirs.@A@ \
-	       @BINDLIBDNSDIR@/libdns.@A@ \
-	       @BINDLIBISCCFGDIR@/libisccfg.@A@ \
-	       @BINDLIBISCDIR@/libisc.@A@
+	       $(BINDLIBIRSDIR)/libirs.@A@ \
+	       $(BINDLIBDNSDIR)/libdns.@A@ \
+	       $(BINDLIBISCCFGDIR)/libisccfg.@A@ \
+	       $(BINDLIBISCDIR)/libisc.@A@
